# ph8.py

./: .env.sample  .gitignore  Dockerfile  Pipfile  README.md  compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: build-and-deploy.yml
ph8/: cache.py  chains.py  config.py  conversation.py  discord.py  info.py  main.old.py  main.py  openai.py  preferences.py  scraping.py  web.py
ph8/ai/: chat.py
ph8/db/: __init__.py  engine.py  session.py
ph8/db/models/: __init__.py  preference.py  user.py
ph8/db/scripts/: __init__.py  migrate.py
ph8/sandbox/: chains.py  direct.py
scripts/: start.py  start.sh
src/: config.py  openai_client.py  ph8.py  typings.py
