[tool.poetry]
name = "ph8"
version = "0.2.0"
description = ""
authors = ["Alex Howard <thezanke@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
"discord.py" = "^2.3.2"
langchain = "^0.0.334"
openai = "^1.2.3"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.24.1"

[tool.poe.tasks.start]
script = "ph8.main:init"
envfile = ".env"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"