[tool.poetry]
name = "ph8"
version = "0.2.0"
description = ""
authors = ["Alex Howard <thezanke@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
"discord.py" = "^2.3.2"
langchain = "^0.0.334"
openai = "^0.28.0"
sqlalchemy = "^2.0.23"
psycopg2 = "^2.9.9"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.24.1"

[tool.poe.tasks.start]
script = "ph8.main:init"
envfile = ".env"

[tool.poe.tasks."db:migrate"]
script = "ph8.db.scripts:migrate"
envfile = ".env"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"